--- a/src/template/custom.css
+++ b/src/template/custom.css
@@ -1,8 +1,16 @@
 .btn {
-  margin: 5px;
+  margin-right: 5px;
 }
 
 .marked-as-done {
   text-decoration: line-through;
   color: #777;
+}
+
+.table-actions {
+  width: 105px;
+}
+
+.todo-form {
+  padding-bottom: 60px;
 }
